<resources>
    <string name="app_name">ProyectoMoviles</string>
    <string name="etContrase_a">Contraseña</string>
    <string name="etCorreo">Correo</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="bienvenid">¡Bienvenid@!</string>
    <string name="todo">TODO</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="Peliculas" />
    <string name="peliculas_cineplanet">Peliculas | CinePlanet</string>
    <string name="estrenos">Estrenos</string>
    <string name="buscar_peliculas">Buscar Peliculas</string>
    <string name="nombre_de_la_pel_cula_2">Nombre de la Película 2</string>
    <string name="nombre_de_la_pel_cula_3">Nombre de la Película 3</string>
    <string name="eliminar_pelicula" />
    <string name="editar_pelicula" />
    <string name="descripci_n_de_la_pel_cula">Descripción de la película</string>
    <string name="nombre_de_la_pel_cula">Nombre de la película</string>
    <string name="modificar_pel_cula">Modificar Película</string>
    <string name="nombrePelicula" />
</resources>