<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollPeliculas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimary"
    tools:context=".MenuPrincipal">


    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtCabecera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="@font/anton"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/peliculas_cineplanet"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_14ssp" />

        <ImageView
            android:id="@+id/imgLogoPelicula"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logo_pelicula"
            app:tint="@color/colorTextIcons" />


    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="673dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965">

        <LinearLayout
            android:id="@+id/layoutLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etBuscador"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:autofillHints=""
                android:background="@drawable/etregistro_bg"
                android:drawableStart="@drawable/ic_logo_buscador"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/buscar_peliculas"
                android:inputType="text"
                android:paddingStart="20dp"
                android:src="@drawable/ic_logo_buscador"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTextIcons"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txtEstreno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/estrenos"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold" />

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayoutPeliculas"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                app:columnCount="3"
                app:rowCount="2">


        </androidx.gridlayout.widget.GridLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>