<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ModificarPelicula">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtCabecera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="@font/anton"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/modificar_pel_cula"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_25ssp" />
    </LinearLayout>

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:background="@drawable/etregistro_bg"
        android:hint="@string/descripci_n_de_la_pel_cula"
        android:inputType="text"
        android:paddingStart="16dp"
        android:textColor="@color/colorTextIcons"
        android:textColorHint="@color/colorTextIcons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847" />

    <EditText
        android:id="@+id/etTitulo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:background="@drawable/etregistro_bg"
        android:hint="@string/nombre_de_la_pel_cula"
        android:inputType="text"
        android:paddingStart="16dp"
        android:textColor="@color/colorTextIcons"
        android:textColorHint="@color/colorTextIcons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="99dp"
        android:layout_height="52dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/anton"
        android:text="Guardar"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescripcion" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="98dp"
        android:layout_height="52dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/anton"
        android:text="Volver"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/btnGuardar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescripcion" />

    <ImageView
        android:id="@+id/imgPelicula"
        android:layout_width="274dp"
        android:layout_height="331dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21"
        tools:ignore="ContentDescription,HardcodedText" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:fontFamily="@font/anton"
        android:text="Título"
        android:textColor="@color/colorTextIcons"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintBottom_toTopOf="@+id/etTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        app:layout_constraintVertical_bias="0.974" />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="448dp"
        android:fontFamily="@font/anton"
        android:text="Descripción"
        android:textColor="@color/colorTextIcons"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintBottom_toTopOf="@+id/etDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>